--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <div class="sticky-buttons">
                 <!-- Share Button -->
                 <button class="share-button" onclick="sharePage()">
-                    <img src="/assets/images/bg/share1.gif" alt="Share" />
+                    <img src="/assets/images/bg/share.png" alt="Share" />
                 </button>
             </div>
             <div class="banner-gallery">
