--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -284,10 +284,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="inner text-center">
-                                <p>&copy; 2024 <a href="https://kahaduwanationalschool.github.io" target="_blank">Angel Heart Public School</a>.</p>
+                           <div class="inner text-center">
+                                <p>&copy; 2024 <a href="https://techredalpha.github.io/AngelHeartPublicSchool/" target="_blank">Angel Heart Public School</a>.</p>
                                 <p>All rights reserved.</p>
-                                <p>Designed by <a href="https://sameeragurusinghe.github.io" target="_blank">RedAlpha</a></p>
+                                <p>Designed by <a href="https://soumya-xd.github.io/pty/" target="_blank">RedAlpha</a></p>
                             </div>
                             
                         </div>
