--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
   <meta charset="utf-8">
   <title>Error 404 - Web Page Not Found - AngelHeartPublicSchool</title>
-  <meta name="description" content="Oops! The page you’re looking for can’t be found on Kahaduwa National School’s website. Return to the homepage or explore other sections.">
+  <meta name="description" content="Oops! The page you’re looking for can’t be found on  AngelHeartPublicSchool’s website. Return to the homepage or explore other sections.">
   <link href="assets/css/vendor/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/vendor/icomoon.css">
   <style>body {display: flex;justify-content: center;align-items: center;height: 100vh;margin: 0;}</style>
